fix layout shifting

--- a/components/Results/styles.module.css
+++ b/components/Results/styles.module.css
@@ -1,9 +1,10 @@
 /* ToDo: use tailwind */
 .container > div {
     will-change: transform, opacity;
-    text-shadow: 0px 2px 40px #00000020, 0px 2px 5px #00000030;
+    position: absolute;
     -webkit-user-select: none;
     user-select: none;
+    padding: 2rem;
   }
 
 .story { 
